2002-05-06  Maurice Diamantini  <diam@ensta.fr>

	* src/jacl/tcl/lang/BinaryCmd.java (cmdProc): Cast argument to
	?: operator to avoid compiler error from Jikes. Add parens
	to make precedence clear.

2002-05-02  Mo DeJong  <mdejong@users.sourceforge.net>

	* new_features.txt: Add notes about the new features
	added to Tcl Blend and Jacl.

2002-05-02  Mo DeJong  <mdejong@users.sourceforge.net>

	* configure: Regen.
	* tcljava.m4 (AC_JAVA_JNI_LIBS): The previous checkin
	neglected to use the $machine variable for variable
	names. Fix that.

2002-04-29  Mo DeJong  <mdejong@users.sourceforge.net>

	* configure: Regen.
	* tcljava.m4 (AC_JAVA_JNI_LIBS): Update the JDK
	detection macro to support blackdown JDK 1.3
	releases for Linux on architectures other than
	i386.

2002-04-14  Mo DeJong  <mdejong@users.sourceforge.net>

	* configure: Regen.
	* tcljava.m4 (AC_JAVA_JNI_LIBS): Update the JDK
	detection macro to support Sun JDK 1.3 and 1.4
	under Linux. Emit an error if no known jvm
	configuration can be found.

2002-04-13  Shawn Boyce  <shawn@qcominc.com>

	* src/jacl/tcl/lang/Expression.java (ExprLex):
	Check that a token starts with a digit before
	passing it to strtod. This avoids a costly
	runtime exception and leads to a 4x speedup
	in some trivial examples.

2002-04-12  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/AfterCmd.java (processTimerEvent,
	processIdleEvent):
	* src/jacl/tcl/lang/Interp.java (eval):
	* src/jacl/tcl/lang/PackageCmd.java (pkgRequire):
	* src/jacl/tcl/lang/Shell.java (run):
	* src/jacl/tcl/lang/SocketConnectionEvent.java (processEvent):
	* src/tclblend/tcl/lang/Interp.java (eval, recordAndEval):
	Pass TCL.EVAL_GLOBAL instead of TCL.GLOBAL_ONLY to
	eval() functions. Fixup docs that suggest using the
	wrong form.

2002-04-12  Shawn Boyce  <shawn@qcominc.com>

	* src/jacl/tcl/lang/FileCmd.java (copyRenameOneFile):
	Treat data copied via 'file copy' as binary. Fix
	array bound bug that was causing the copy command