@@ -1,3 +1,9 @@
+2002-05-16  Maurice Diamantini  <diam@ensta.fr>
+
+	* src/jacl/tcl/lang/Util.java (isMac): Return false for
+	Mac OSX since it is a UNIX system. This enables exec
+	under Mac OSX.
+
 2002-05-06  Maurice Diamantini  <diam@ensta.fr>
 
 	* src/jacl/tcl/lang/BinaryCmd.java (cmdProc): Cast argument to
